--- a/index.html
+++ b/index.html
@@ -95,12 +95,16 @@
   </nav>
 
   <section id="hakkimda">
-    <h2>Hakkımda</h2>
-    <div class="card">
-      <p>Ben Zehra Şeyma — Shamanberia'nın kurucusuyum. Şamanik enerji çalışmaları, mudralar, astrolojik haritalar ve ruhsal farkındalık üzerine rehberlik yapıyorum. 
-      Bu alan, insanın kendi öz ışığıyla yeniden bağlantı kurmasını hedefleyen kadim bilgeliklerin çağdaş bir buluşma noktasıdır.</p>
-    </div>
-  </section>
+  <h2>Hakkımda</h2>
+  <div class="card">
+    <p><strong>Ben ShamanBeria.</strong><br><br>
+    Ruhsal yolda hem rehber hem de hâlâ öğrenmekte olan bir öğrenciyim.  
+    Yolumun amacı; insanın özündeki ışığı hatırlamasına, kendi hakikatini fark etmesine eşlik edebilmek.  
+    Kadim bilgeliği modern bilincin diliyle buluşturuyor, her karşılaşmayı bir öğrenme alanı olarak görüyorum.  
+    Bu alan, birlikte dönüşmenin ve ışıkla yol almanın buluşma noktasıdır — çünkü ben de hâlâ o ışığın öğrencisiyim.</p>
+  </div>
+</section>
+
 
   <section id="calismalar">
     <h2>Ruhsal Çalışmalar</h2>
@@ -119,7 +123,7 @@
   <section id="iletisim">
     <h2>İletişim</h2>
     <div class="card">
-      <p>E-posta: <a href="mailto:ornek@mail.com">ornek@mail.com</a><br/>
+      <p>E-posta: <a href="mailto:ornek@mail.com">shamanberia@gmail.com</a><br/>
       Instagram: <a href="#" target="_blank">@shamanberia</a></p>
     </div>
   </section>
